--- a/package.json
+++ b/package.json
@@ -1,36 +1,48 @@
 {
-  "name": "dvna",
-  "version": "0.0.1",
-  "description": "Damn Vulnerable NodeJS Application",
-  "main": "server.js",
-  "directories": {
-    "doc": "docs"
-  },
+  "name": "model-viewer-packages",
+  "private": true,
+  "description": "The repository for all <model-viewer> packages",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "test": "./node_modules/.bin/lerna run test --stream",
+    "test:ci": "./node_modules/.bin/lerna run test:ci --stream",
+    "bootstrap": "./node_modules/.bin/lerna bootstrap --ci",
+    "format": "find packages/**/src -name '*.ts' | grep -v .d.ts | xargs ./node_modules/.bin/clang-format --verbose -i",
+    "lint": "./node_modules/.bin/eslint \"packages/**/*.ts\"",
+    "lint:fix": "npm run lint -- --fix",
+    "clean": "./node_modules/.bin/lerna run clean --stream",
+    "build": "./node_modules/.bin/lerna run build --stream",
+    "serve": "./node_modules/.bin/http-server -c-1",
+    "update:package-lock": "rm -rf node_modules package-lock.json && npm install && lerna exec 'rm -rf node_modules package-lock.json' && lerna bootstrap && npm run clean"
   },
-  "author": "sns",
-  "license": "MIT",
-  "dependencies": {
-    "bcrypt": "^1.0.3",
-    "csurf": "^1.9.0",
-    "ejs": "^2.5.7",
-    "express": "^4.16.2",
-    "express-fileupload": "^0.4.0",
-    "express-flash": "0.0.2",
-    "express-session": "^1.15.6",
-    "flash": "^1.1.0",
-    "libxmljs": "^0.19.1",
-    "mathjs": "3.10.1",
-    "md5": "^2.2.1",
-    "morgan": "^1.9.0",
-    "mysql2": "^1.4.2",
-    "node-serialize": "0.0.4",
-    "passport": "^0.4.0",
-    "passport-local": "^1.0.0",
-    "sequelize": "^4.13.10",
-    "winston": "^3.0.0",
-    "x-xss-protection": "^1.1.0"
+  "husky": {
+    "hooks": {
+      "pre-commit": "./scripts/pre-commit.sh"
+    }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/google/model-viewer.git"
+  },
+  "author": "DevXR Contributors",
+  "license": "Apache-2.0",
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "bugs": {
+    "url": "https://github.com/google/model-viewer/issues"
+  },
+  "homepage": "https://github.com/google/model-viewer#readme",
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.31.0",
+    "@typescript-eslint/parser": "^5.31.0",
+    "clang-format": "^1.8.0",
+    "eslint": "^8.20.0",
+    "eslint-config-google": "^0.14.0",
+    "eslint-plugin-mocha": "^10.1.0",
+    "eslint-plugin-wc": "^1.3.0",
+    "http-server": "^14.1.1",
+    "husky": "^7.0.1",
+    "lerna": "^5.6.2",
+    "typescript": "4.8.4"
   }
 }
