--- a/.github/workflows/codescan.yaml
+++ b/.github/workflows/codescan.yaml
@@ -1,19 +1,32 @@
 name: Docker Scanner
 
-on: [push]
+on:
+  push:
+    branches:
+      - main  # Change this to your main branch name
 
 jobs:
   scan:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
-    - name: Run Docker scanner
-      run: |
-        COMMIT_ID=$(git rev-parse HEAD)
-        docker run rohitcoder/code-security --path https://github.com/appsecco/dvja \
-          --license-compliance --sast --sca --secret --license-compliance \
-          --policy-url https://raw.githubusercontent.com/rohitcodergroww/cicd-policies/main/policy.yaml \
-          --verbose --commit-id $COMMIT_ID
+      - name: Set current path
+        id: current-path
+        run: |
+          echo "::set-output name=path::$(pwd)"
+
+      - name: Log current path and commit ID
+        run: |
+          echo "Current Path: ${{ steps.current-path.outputs.path }}"
+          echo "Commit ID: ${{ github.sha }}"
+
+      - name: Run Docker scanner
+        run: |
+          COMMIT_ID=$(git rev-parse HEAD)
+          docker run rohitcoder/code-security --path ${{ steps.current-path.outputs.path }} \
+            --license-compliance --sast --sca --secret --license-compliance \
+            --policy-url https://raw.githubusercontent.com/rohitcodergroww/cicd-policies/main/policy.yaml \
+            --verbose --commit-id $COMMIT_ID
